Add a special input configuration dialog for the GameCube Mic
This is more logical as the mic is plugged into an EXI slot so it should be configured via the GameCube config dialog.  This also allows to pass the right port number for the new dialog.

--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -46,6 +46,7 @@ set(GUI_SRCS
 	Input/InputConfigDiagBitmaps.cpp
 	Input/HotkeyInputConfigDiag.cpp
 	Input/GCPadInputConfigDiag.cpp
+	Input/MicButtonConfigDiag.cpp
 	Input/GCKeyboardInputConfigDiag.cpp
 	Input/WiimoteInputConfigDiag.cpp
 	Input/NunchukInputConfigDiag.cpp
